--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-"peiming's personal website" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Peiming Yu</title>
+    <meta charset="UTF-8">
+    <link href="base/css/common-Screen-display.css" rel="stylesheet">
+    <link href="base/css/homepage-screen.css" rel="stylesheet">
+    <link href="base/css/print-display.css" rel="stylesheet" media="print">
+</head>
+
+<body>
+
+<div class="top-nav" id="top-nav-print">
+    <a href="index.html">Home</a>
+    <a href="base/html/About.html">About</a>
+    <a href="base/html/Hobbies.html">Hobbies</a>
+    <a href="base/html/Skills.html">Skills</a>
+    <a href="base/html/Contact.html">Contact</a>
+</div>
+
+<div class = "content" id="content-print">
+    <img src="base/multimedia/images/profile.jpg" id="clipped-profile-picture" alt="profile picture">
+    <!-- This is an simple introduction about me -->
+    <p class="uppercase"><b>I am</b></p>
+    <h2 class="uppercase">peiming yu</h2>
+    <h2 class="uppercase">student, coder, team-player</h2>
+</div>
+
+<div class="footer" >
+    <p>Footer</p>
+    <p id="print-notice">Print from:Peiming Yu's homepage</p>
+</div>
+
+</body>
+</html>
