fixing bugs and fixing validation issue for  html

--- a/base/html/Skills.html
+++ b/base/html/Skills.html
@@ -40,12 +40,12 @@
             </tr>
         </tbody>
     </table>
-
+</div>
 <div class="footer">
     <p>Footer</p>
     <p id="print-notice">Print from:Peiming Yu's skills page</p>
 </div>
+    <script src="../js/skills.js"></script>
 
 </body>
-<script src="../js/skills.js"></script>
 </html>
